# advent_of_code_2022

./: Cargo.toml  README.md  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: readme-stars.yml
aoc2022/: Cargo.toml
aoc2022/src/: lib.rs  main.rs
aoc2022/src/exercises/: day1.rs  mod.rs
aoc2022/src/utils/: macros.rs
assets/: dayX.rs.templ
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
src/day10/: mod.rs  tests.rs
src/day9/: mod.rs  motion.rs
